--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ MIT License
   ~
   ~ Copyright (c) 2017 klnvch
@@ -25,149 +26,112 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportHeight="99"
-    android:viewportWidth="99">
+    android:viewportHeight="78"
+    android:viewportWidth="78">
     <path
         android:fillColor="#EDEDED"
-        android:pathData="M0,0h99v99h-99z" />
+        android:pathData="M0,0h78v78h-78z" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M9,0L9,99"
+        android:pathData="M9,0L9,78"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M19,0L19,99"
+        android:pathData="M19,0L19,78"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M29,0L29,99"
+        android:pathData="M29,0L29,78"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M39,0L39,99"
+        android:pathData="M39,0L39,78"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M49,0L49,99"
+        android:pathData="M49,0L49,78"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M59,0L59,99"
+        android:pathData="M59,0L59,78"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M69,0L69,99"
+        android:pathData="M69,0L69,78"
+        android:strokeColor="#AAC8C8C8"
+        android:strokeWidth="0.8" />
+
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M0,9L78,9"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M79,0L79,99"
+        android:pathData="M0,19L78,19"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M89,0L89,99"
+        android:pathData="M0,29L78,29"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M0,9L99,9"
+        android:pathData="M0,39L78,39"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M0,19L99,19"
+        android:pathData="M0,49L78,49"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M0,29L99,29"
+        android:pathData="M0,59L78,59"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M0,39L99,39"
+        android:pathData="M0,69L78,69"
+        android:strokeColor="#AAC8C8C8"
+        android:strokeWidth="0.8" />
+
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M19,29L59,29"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M0,49L99,49"
+        android:pathData="M19,39L59,39"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M0,59L99,59"
+        android:pathData="M19,49L59,49"
+        android:strokeColor="#AAC8C8C8"
+        android:strokeWidth="0.8" />
+
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M29,19L29,59"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M0,69L99,69"
+        android:pathData="M39,19L39,59"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
     <path
         android:fillColor="#00000000"
-        android:pathData="M0,79L99,79"
-        android:strokeColor="#AAC8C8C8"
-        android:strokeWidth="0.8" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,89L99,89"
-        android:strokeColor="#AAC8C8C8"
-        android:strokeWidth="0.8" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,29L79,29"
-        android:strokeColor="#AAC8C8C8"
-        android:strokeWidth="0.8" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,39L79,39"
-        android:strokeColor="#AAC8C8C8"
-        android:strokeWidth="0.8" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,49L79,49"
-        android:strokeColor="#AAC8C8C8"
-        android:strokeWidth="0.8" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,59L79,59"
-        android:strokeColor="#AAC8C8C8"
-        android:strokeWidth="0.8" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,69L79,69"
-        android:strokeColor="#AAC8C8C8"
-        android:strokeWidth="0.8" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M29,19L29,79"
-        android:strokeColor="#AAC8C8C8"
-        android:strokeWidth="0.8" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M39,19L39,79"
-        android:strokeColor="#AAC8C8C8"
-        android:strokeWidth="0.8" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M49,19L49,79"
-        android:strokeColor="#AAC8C8C8"
-        android:strokeWidth="0.8" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M59,19L59,79"
-        android:strokeColor="#AAC8C8C8"
-        android:strokeWidth="0.8" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M69,19L69,79"
+        android:pathData="M49,19L49,59"
         android:strokeColor="#AAC8C8C8"
         android:strokeWidth="0.8" />
 </vector>
