--- a/app/src/main/res/layout-land/activity_main_menu.xml
+++ b/app/src/main/res/layout-land/activity_main_menu.xml
@@ -40,7 +40,7 @@
         android:paddingRight="@dimen/btn_table_padding">
 
         <TextView
-            android:id="@+id/hello_user"
+            android:id="@+id/textViewGreeting"
             style="@style/TextAppearance.AppCompat.Headline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
