--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -22,91 +22,94 @@
   ~ SOFTWARE.
   -->
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/paper_tiled"
-    android:scrollbars="vertical"
+    android:padding="32dp"
     tools:context="by.klnvch.link5dots.MainMenuActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textViewGreeting"
+        style="@style/TextAppearance.AppCompat.Headline"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_marginBottom="32dp"
         android:gravity="center"
-        android:orientation="vertical"
-        android:padding="@dimen/btn_table_padding">
+        app:layout_constraintBottom_toTopOf="@+id/main_menu_single_player"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/textViewGreeting"
-            style="@style/TextAppearance.AppCompat.Headline"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingBottom="@dimen/btn_table_padding"
-            android:text="" />
+    <Button
+        android:id="@+id/main_menu_single_player"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_android_48dp"
+        android:drawableStart="@drawable/ic_android_48dp"
+        android:onClick="onClick"
+        android:text="@string/menu_single_player"
+        app:layout_constraintBottom_toTopOf="@+id/main_menu_multi_player"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/main_menu_single_player"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_android_48dp"
-            android:drawableStart="@drawable/ic_android_48dp"
-            android:onClick="onClick"
-            android:text="@string/menu_single_player" />
+    <Button
+        android:id="@+id/main_menu_multi_player"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_person_48dp"
+        android:drawableStart="@drawable/ic_person_48dp"
+        android:onClick="onClick"
+        android:text="@string/menu_multi_player"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/main_menu_multi_player"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_person_48dp"
-            android:drawableStart="@drawable/ic_person_48dp"
-            android:onClick="onClick"
-            android:text="@string/menu_multi_player" />
+    <Button
+        android:id="@+id/main_menu_scores"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_star_48dp"
+        android:drawableStart="@drawable/ic_star_48dp"
+        android:onClick="onClick"
+        android:text="@string/scores_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_menu_multi_player" />
 
-        <Button
-            android:id="@+id/main_menu_scores"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_star_48dp"
-            android:drawableStart="@drawable/ic_star_48dp"
-            android:onClick="onClick"
-            android:text="@string/scores_title" />
+    <ImageButton
+        android:id="@+id/main_menu_settings"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/settings_label"
+        android:onClick="onClick"
+        android:src="@drawable/ic_settings_48dp"
+        app:layout_constraintEnd_toStartOf="@+id/main_menu_about"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_menu_scores" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <ImageButton
+        android:id="@+id/main_menu_about"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/application_info_label"
+        android:onClick="onClick"
+        android:src="@drawable/ic_info_48dp"
+        app:layout_constraintEnd_toStartOf="@+id/main_menu_how_to"
+        app:layout_constraintStart_toEndOf="@+id/main_menu_settings"
+        app:layout_constraintTop_toBottomOf="@+id/main_menu_scores" />
 
-            <ImageButton
-                android:id="@+id/main_menu_settings"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:contentDescription="@string/settings_label"
-                android:onClick="onClick"
-                android:src="@drawable/ic_settings_48dp" />
+    <ImageButton
+        android:id="@+id/main_menu_how_to"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/how_to_title"
+        android:onClick="onClick"
+        android:src="@drawable/ic_help_48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/main_menu_about"
+        app:layout_constraintTop_toBottomOf="@+id/main_menu_scores" />
 
-            <ImageButton
-                android:id="@+id/main_menu_about"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:contentDescription="@string/application_info_label"
-                android:onClick="onClick"
-                android:src="@drawable/ic_info_48dp" />
-
-            <ImageButton
-                android:id="@+id/main_menu_how_to"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:contentDescription="@string/how_to_title"
-                android:onClick="onClick"
-                android:src="@drawable/ic_help_48dp" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-</ScrollView>
+</android.support.constraint.ConstraintLayout>
