--- a/app/src/main/res/layout/activity_nsd_picker.xml
+++ b/app/src/main/res/layout/activity_nsd_picker.xml
@@ -28,6 +28,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/paper_tiled"
+    android:keepScreenOn="true"
     android:padding="32dp"
     tools:context="by.klnvch.link5dots.multiplayer.nsd.NsdPickerActivity">
 
