--- a/app/src/main/res/layout-land/activity_multiplayer_menu.xml
+++ b/app/src/main/res/layout-land/activity_multiplayer_menu.xml
@@ -52,7 +52,7 @@
         android:drawableLeft="@drawable/ic_people_48dp"
         android:drawableStart="@drawable/ic_people_48dp"
         android:onClick="onClick"
-        android:text="@string/two_players"
+        android:text="@string/menu_two_players"
         app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
         app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
         app:layout_constraintStart_toStartOf="parent" />
