--- a/app/src/main/res/layout/activity_nsd_picker.xml
+++ b/app/src/main/res/layout/activity_nsd_picker.xml
@@ -45,20 +45,20 @@
 
     <TextView
         android:id="@+id/textStatusLabel"
-        style="@style/TextAppearance.AppCompat.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxLines="1"
         android:text="@string/apn_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonCreate" />
 
     <TextView
         android:id="@+id/textStatusValue"
-        style="@style/TextAppearance.AppCompat.Medium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:maxLines="1"
         android:text="@string/apn_not_set"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textStatusLabel"
@@ -91,7 +91,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:checked="false"
-        android:textOff="@string/search_menu"
+        android:textOff="@string/scan"
         android:textOn="@string/cancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
