--- a/app/src/main/res/layout/switch_dots_type.xml
+++ b/app/src/main/res/layout/switch_dots_type.xml
@@ -22,19 +22,27 @@
   ~ SOFTWARE.
   -->
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/paper_tiled">
+    android:orientation="horizontal">
 
-    <FrameLayout
-        android:id="@+id/fragmentContainer"
+    <ImageView
+        android:id="@+id/dot_1"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="8dp"
+        android:layout_weight="1"
+        android:contentDescription="@string/yes"
+        android:src="@drawable/game_dot_circle_red" />
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/dot_2"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_margin="8dp"
+        android:layout_weight="1"
+        android:contentDescription="@string/no"
+        android:src="@drawable/game_dot_circle_blue" />
+
+</LinearLayout>
